fix: fix icon alignment and move component specific CSS into components (#505)

--- a/packages/components/src/popover/Popover.less
+++ b/packages/components/src/popover/Popover.less
@@ -1,7 +1,3 @@
-html.ios-click {
-  cursor: pointer;
-}
-
 .tw-popover.bottom-left::before {
   // Bootstrap has this as 29px which doesn't correctly account for the rotation
   // This value brings it in line with the other positions
