--- a/packages/css/src/less/core/_scaffolding.less
+++ b/packages/css/src/less/core/_scaffolding.less
@@ -88,6 +88,10 @@ a,
   }
 }
 
+html.ios-click {
+  cursor: pointer;
+}
+
 fieldset {
   margin: 0;
   padding: 0;
@@ -309,7 +313,6 @@ hr {
   height: 0; // Normalize 8.0.1
   margin: var(--space-16) auto;
   overflow: visible; // Normalize 8.0.1
-
   border: 0;
   border-top: 1px solid var(--brand-smoke-plus-10);
 
